src/ui/snapshots/terminal_typing_trainer__ui__tests__finished_round_shows_explanation.snap
---
source: src/ui/mod.rs
expression: "draw(&app, 80, 8).backend()"
---
"                                                                                "
"                                                                                "
"        ╭ type ────────────────────────────────────────────────────────╮        "
"        │ls -l | wc -l                                                 │        "
"        ╰──────────────────────────────────────────────────────────────╯        "
"        Explain this · enter next · esc quit                                    "
"                                                                                "
"                                                                                "
