src/ui/snapshots/terminal_typing_trainer__ui__tests__narrow_typing_screen_wraps_command.snap
---
source: src/ui/mod.rs
expression: "render_typing_screen(40, 12).backend()"
---
"                                        "
"                                        "
"                                        "
"                                        "
"╭ type ────────────────────────────────╮"
"│find /var/log -name '*.log' -mtime +7 │"
"│-exec gzip {} \;                      │"
"╰──────────────────────────────────────╯"
"esc quit                                "
"                                        "
"                                        "
"                                        "
