src/ui/snapshots/terminal_typing_trainer__ui__tests__results_with_missed_symbols.snap
---
source: src/ui/mod.rs
expression: "draw(&app, 80, 12).backend()"
---
"                                                                                "
"                                                                                "
"                                                                                "
"        ╭ results ─────────────────────────────────────────────────────╮        "
"        │find /var/log -name '*.log' -mtime +7 -exec gzip {} \;        │        "
"        │58 wpm   94% acc                                              │        "
"        │Explain this                                                  │        "
"        │missed  ' ×2  { ×1                                            │        "
"        ╰──────────────────────────────────────────────────────────────╯        "
"        enter next · esc quit                                                   "
"                                                                                "
"                                                                                "
