src/ui/snapshots/terminal_typing_trainer__ui__tests__results_without_mistakes.snap
---
source: src/ui/mod.rs
expression: "draw(&app, 80, 10).backend()"
---
"                                                                                "
"        ╭ results ─────────────────────────────────────────────────────╮        "
"        │ls -l | wc -l                                                 │        "
"        │65 wpm   100% acc                                             │        "
"        │Explain this                                                  │        "
"        │no missed symbols                                             │        "
"        │no weak symbols yet                                           │        "
"        ╰──────────────────────────────────────────────────────────────╯        "
"        enter next · esc quit                                                   "
"                                                                                "
