src/ui/snapshots/terminal_typing_trainer__ui__tests__typing_screen_snapshot.snap
---
source: src/ui/mod.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"     ╭ type ──────────────────────────────────────────────────────────────╮     "
"     │find /var/log -name '*.log' -mtime +7 -exec gzip {} \;              │     "
"     │                                                                    │     "
"     │                                                                    │     "
"     ╰────────────────────────────────────────────────────────────────────╯     "
"     esc quit                                                                   "
"                                                                                "
"                                                                                "
"                                                                                "
